<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/activity_list_students_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_student_label_name" />

    <EditText
        android:id="@+id/activity_list_students_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_edit_student_hint_name"
        android:inputType="textCapWords"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="yes" />

    <TextView
        android:id="@+id/activity_list_students_label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_student_label_phone" />

    <EditText
        android:id="@+id/activity_list_students_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_edit_student_hint_phone"
        android:inputType="phone"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="yes" />

    <TextView
        android:id="@+id/activity_list_students_label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_student_label_email" />

    <EditText
        android:id="@+id/activity_list_students_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_edit_student_hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/activity_edit_student_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_student_save"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

</LinearLayout>